# ChatBot

./: .gitignore  Dockerfile  README.md  bot.py  bot2.py  docker-compose.yaml  main.py  main_test.py  pyproject.toml  send_message.py
src/: discrd.py  main.py  main_test.py  tg.py
src/db/: database.py
