[tool.poetry]
name = "chatbot"
version = "0.1.0"
description = ""
authors = ["Andrei Agaev <andagaev@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
idna = "^3.8"
requests = "^2.32.3"
python-telegram-bot = "^21.5"
telethon = "^1.36.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"
ruff = "^0.6.4"
pytest-mock = "^3.14.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
